# Physical-Humanoids-Hackathon-Project

./: docusaurus.config.ts  sidebars.ts
.specify/: plan.md  research.md  spec.md  validation-checklist.md
backend/: api.py  main.py  pyproject.toml  requirements.txt
docs/intro/: 01-what-is-physical-ai.md  02-hello-world-example.md  03-understanding-physical-ai.md  04-robotics-fundamentals.md  05-humanoid-robot-design.md  06-ai-for-robot-control.md  07-sensing-and-perception.md  08-locomotion-and-manipulation.md  09-ethical-considerations.md
prompts/001-physical-ai-spec/: 1-create-book-spec.spec.prompt.md  2-create-development-plan.plan.prompt.md  3-create-detailed-development-plan.plan.prompt.md  4-generate-actionable-tasks-from-plan.tasks.prompt.md
prompts/constitution/: 1-create-initial-project-constitution.constitution.prompt.md
prompts/general/: 1-confirming-constitution-file.general.prompt.md  1-implement-signup-feature.general.prompt.md  5-remove-docusaurus-info-from-homepage.general.prompt.md
prompts/language-conversion/: 1-implement-language-conversion-button.plan.prompt.md
src/components/: Ragchatbot.tsx  chatbot.jsx  chatbot.module.css
src/contexts/: AuthContext.tsx
src/pages/: index.module.css  index.tsx  signin.module.css  signin.tsx  signup.module.css  signup.tsx
src/services/: apiClient.ts
src/theme/: Root.tsx
